{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 167,
  "lineage": "922ed38f-a3b8-274b-714a-857d51b96431",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09b2f6d85764ec71b",
            "arn": "arn:aws:ec2:us-west-1:858952941568:instance/i-052dbe77d3d4ca5aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052dbe77d3d4ca5aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "asus-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0634fab9d667c56f4",
            "private_dns": "ip-10-0-1-152.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.152",
            "public_dns": "ec2-13-57-190-84.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.190.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe15788a1a5cb0f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00b1061324cd1c6d1",
            "tags": {
              "Name": "terraform-instance"
            },
            "tags_all": {
              "Name": "terraform-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0373d8a2a6e94f8e3"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.terraform_allow_ssh",
            "aws_subnet.terraform_public_subnet",
            "data.aws_ami.amazon-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:858952941568:internet-gateway/igw-01b36fe83a0fddd66",
            "id": "igw-01b36fe83a0fddd66",
            "owner_id": "858952941568",
            "tags": {
              "Name": "adan-terraform-IGW"
            },
            "tags_all": {
              "Name": "adan-terraform-IGW"
            },
            "vpc_id": "vpc-0d6827da2e8db4df9"
          },
          "dependencies": [
            "aws_vpc.adan-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "terraform_main_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbe15b04b7c44eb6",
            "original_route_table_id": "rtb-006db51747dbb9d33",
            "route_table_id": "rtb-057f7e47edfc2703b",
            "vpc_id": "vpc-0d6827da2e8db4df9"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_IGW",
            "aws_route_table.terraform_public_rt",
            "aws_vpc.adan-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:858952941568:route-table/rtb-057f7e47edfc2703b",
            "id": "rtb-057f7e47edfc2703b",
            "owner_id": "858952941568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b36fe83a0fddd66",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "adan-terraform-public-rt"
            },
            "tags_all": {
              "Name": "adan-terraform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6827da2e8db4df9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_IGW",
            "aws_vpc.adan-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_public_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2b0e047d371c0fe",
            "route_table_id": "rtb-057f7e47edfc2703b",
            "subnet_id": "subnet-00b1061324cd1c6d1"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_IGW",
            "aws_route_table.terraform_public_rt",
            "aws_subnet.terraform_public_subnet",
            "aws_vpc.adan-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:858952941568:security-group/sg-0373d8a2a6e94f8e3",
            "description": "Allows SSH connections to terraform VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0373d8a2a6e94f8e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound rule",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound rule",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound rule",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allows ssh",
            "name_prefix": "",
            "owner_id": "858952941568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6827da2e8db4df9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.adan-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:858952941568:subnet/subnet-00b1061324cd1c6d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1061324cd1c6d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858952941568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "adan-terraform-public_subnet"
            },
            "tags_all": {
              "Name": "adan-terraform-public_subnet"
            },
            "vpc_id": "vpc-0d6827da2e8db4df9"
          },
          "dependencies": [
            "aws_vpc.adan-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "adan-terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:858952941568:vpc/vpc-0d6827da2e8db4df9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-04fb610eef8369cb5",
            "default_route_table_id": "rtb-057f7e47edfc2703b",
            "default_security_group_id": "sg-07f71af3201c57912",
            "dhcp_options_id": "dopt-0a2f855cb9b072028",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d6827da2e8db4df9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057f7e47edfc2703b",
            "owner_id": "858952941568",
            "tags": {
              "Name": "adan-terraform-vpc"
            },
            "tags_all": {
              "Name": "adan-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}